--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.5",
+    "@clerk/themes": "^1.7.9",
     "@prisma/client": "^5.9.0",
-    "@vercel/postgres": "^0.7.2",
     "next": "14.1.0",
     "prisma": "^5.9.0",
     "react": "^18",
