--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^4.29.5",
     "@clerk/themes": "^1.7.9",
     "@prisma/client": "^5.9.0",
+    "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "prisma": "^5.9.0",
     "react": "^18",
